# morpheus

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  docker-morpheus-run.py  morpheus-docker-run.py  run.py
examples/all-send-one/: aso-v1-irecv.cpp  aso-v1.cpp  aso-v2.cpp  aso-v3.cpp
include/morpheus/: Utils.hpp
include/morpheus/ADT/: CommNetFactory.hpp  CommunicationNet.hpp  ParentPointerNode.hpp
include/morpheus/Analysis/: IsRank.hpp  MPICallLocalizator.h  MPILabellingAnalysis.hpp  MPIScopeAnalysis.hpp  RankLocalizator.hpp
include/morpheus/Formats/: DotGraph.hpp  Formatter.hpp  PlainText.hpp
include/morpheus/Transforms/: GenerateMPNet.hpp  MPIPruneProcess.hpp  MPISubstituteRank.hpp
libs/: CMakeLists.txt  Utils.cpp  morph.cpp
libs/ADT/: CMakeLists.txt  CommunicationNet.cpp
libs/Analysis/: CMakeLists.txt  CallFinder.hpp  IsRank.cpp  MPILabellingAnalysis.cpp  MPIScopeAnalysis.cpp  RankLocalizator.cpp  tagrank_pass.cpp
libs/Transforms/: CMakeLists.txt  GenerateMPNet.cpp  MPIPruneProcess.cpp  MPISubstituteRank.cpp
libs/ranktagger/: CMakeLists.txt  tagrank_pass.cpp  testing_pass.cpp  testing_pass.hpp
src/: CMakeLists.txt  morpheus.cpp  morpheus.py
toys/: compile-toy  hello-mpi.cpp
toys/all-send-one-v1/: aso.cpp
utils/: run-pass-with-opt  setup-env  use-debug  use-release
